subprojects {

    group = 'org.bananalaba.jdk24'
    version = "$rev_project"

    apply plugin: 'java'

    sourceCompatibility = '1.23'

    repositories {
        mavenLocal()
        mavenCentral()
    }

    tasks.withType(JavaCompile).each {
        it.options.compilerArgs.add('--enable-preview')
    }

    test {
        useJUnitPlatform()
        jvmArgs(['--enable-preview'])
    }

    dependencies {
        testImplementation "org.junit.jupiter:junit-jupiter:$rev_junit"
        testImplementation "org.mockito:mockito-core:$rev_mockito"
        testImplementation "org.mockito:mockito-junit-jupiter:$rev_mockito"
        testImplementation "org.assertj:assertj-core:$rev_assertj"

        compileOnly "org.projectlombok:lombok:$rev_lombok"
        annotationProcessor "org.projectlombok:lombok:$rev_lombok"

        testCompileOnly "org.projectlombok:lombok:$rev_lombok"
        testAnnotationProcessor "org.projectlombok:lombok:$rev_lombok"

        implementation "org.apache.logging.log4j:log4j-slf4j-impl:$rev_log4j"
        implementation "org.slf4j:slf4j-api:$rev_slf4j"
    }

}
